--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
   <head>
     <meta charset="UTF-8" />
     <title>HTML, CSS and SASS Boilerplate</title>
@@ -8,11 +8,12 @@
       content="Used as a boilerplate for tasks in the 'HTML, CSS and SASS' course in boom.dev"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="js/app.js"></script>
   </head>
-  <body>
-    <div class="main">
-      <div class="emoji mb-6">💣🤯💥</div>
-      <button class="button">Boom?</button>
+  <body >
+  <div class="main">
+      <img src="images/img_avatar.png" class="image" onclick="myFunction()" alt="avatar">
     </div>
   </body>
+
 </html>
