--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/html">
-  <head>
-    <meta charset="UTF-8" />
+<head>
+    <meta charset="UTF-8"/>
     <title>HTML, CSS and SASS Boilerplate</title>
     <meta
-      name="description"
-      content="Used as a boilerplate for tasks in the 'HTML, CSS and SASS' course in boom.dev"
+            name="description"
+            content="Used as a boilerplate for tasks in the 'HTML, CSS and SASS' course in boom.dev"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <script src="js/app.js"></script>
-  </head>
-  <body >
-  <div class="main">
-      <img src="images/img_avatar.png" class="image" onclick="myFunction()" alt="avatar">
+</head>
+<body>
+<div class="main">
+    <div class="image">
+        <img src="images/img_avatar.png" onclick="myFunction()" alt="avatar">
     </div>
-  </body>
+</div>
+</body>
 
 </html>
